Added support for Forge
closes #3